Added the dashboard for viewing app mem usage